--- a/rust-sync/.vscode/launch.json
+++ b/rust-sync/.vscode/launch.json
@@ -11,6 +11,7 @@
       "program": "${workspaceRoot}/target/debug/${workspaceRootFolderName}",
       "args": [],
       "cwd": "${workspaceFolder}",
+      "terminal": "external",
       "sourceLanguages": ["rust"]
     }
   ]
